docker/simple/k8s/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailchat-admin
  namespace: tailchat
spec:
  selector:
    matchLabels:
      app: tailchat-admin
  replicas: 1
  template:
    metadata:
      labels:
        app: tailchat-admin
    spec:
      containers:
        - name: tailchat
          image: 21epub-registry-vpc.cn-hangzhou.cr.aliyuncs.com/21epub/tailchat:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command:
            - pnpm
          args:
            - start:admin
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 11000
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
          #   timeoutSeconds: 2
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 11000
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
          #   timeoutSeconds: 2
          #   failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 51Mi
            limits:
              cpu: 500m
              memory: 256Mi
#  type: Directory
      imagePullSecrets:
      - name: cr-reg
      - name: cri-reg



---
apiVersion: v1
kind: Service
metadata:
  name: tailchat-admin-service
  namespace: tailchat
spec:
  type: ClusterIP
  selector:
    app: tailchat-admin
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
