docker/simple/k8s/tailchat.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tailchat
  namespace: tailchat
spec:
  selector:
    matchLabels:
      app: tailchat
  serviceName: tailchat
  replicas: 3
  template:
    metadata:
      labels:
        app: tailchat
    spec:
      containers:
        - name: tailchat
          image: 21epub-registry-vpc.cn-hangzhou.cr.aliyuncs.com/21epub/tailchat:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 11000
          livenessProbe:
            httpGet:
              path: /health
              port: 11000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 11000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 51Mi
            limits:
              cpu: 500m
              memory: 256Mi
#  type: Directory
      imagePullSecrets:
      - name: cr-reg
      - name: cri-reg


---
apiVersion: v1
kind: Service
metadata:
  name: tailchat-service
  namespace: tailchat
spec:
  type: ClusterIP
  selector:
    app: tailchat
  ports:
    - protocol: TCP
      port: 11000
      targetPort: 11000
