docker/simple/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: tailchat
  annotations:
    traefik.ingress.kubernetes.io/routing-type: edge
spec:
  tls:
    - hosts:
        - tailchat.21epub.com
      secretName: tailchat-https  
  rules:
  - host: tailchat.21epub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tailchat-service
            port:
              number: 11000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: tailchat-admin-service
            port:
              number: 3000        
      - path: /es
        pathType: Prefix
        backend:
          service:
            name: elasticsearch.comac
            port:
              number: 9200
